--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Guoquan Chen"
 title_separator          : "-"
 name                     : &name "Guoquan Chen"
 description              : &description "A possible Ph. D candidate"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://john-chen1223.github.io # the base hostname & protocol for your site e.g. "https://john-chen1223.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "john-chen1223/john-chen1223.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -22,10 +22,10 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Guoquan Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "A possible Ph. D candidate"
+  location         : "Shenzhen, Guangdong, China"
   employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
