--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "A possible Ph. D candidate"
   location         : "Shenzhen, Guangdong, China"
-  employer         : "Harbin Institute of Technology, Shenzhen"
+  employer         : "HITSZ"
   uri              : # URL
   email            : "180210217@stu.hit.edu.cn" 
 
