--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "CN"
 title                    : "Guoquan Chen"
 title_separator          : "-"
 name                     : &name "Guoquan Chen"
-description              : &description "A possible Ph. D candidate. Now a M.S. student at Harbin Institute of Technology (Shenzhen)."
+description              : &description "A possible Ph. D candidate,\n now a M.S. student at Harbin Institute of Technology (Shenzhen)."
 url                      : https://john-chen1223.github.io # the base hostname & protocol for your site e.g. "https://john-chen1223.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "john-chen1223/john-chen1223.github.io"
