--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
-    tracking_id          :
+    tracking_id          :G-FJY5CRRCCF
 
 
 # Reading Files
