--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Guoquan Chen"
 title_separator          : "-"
 name                     : &name "Guoquan Chen"
 description              : &description "A possible Ph.D candidate, now a M.S. student at Harbin Institute of Technology, Shenzhen."
-url                      : https://john-chen1223.github.io # the base hostname & protocol for your site e.g. "https://john-chen1223.github.io"
+url                      : https://john-chen1223.github.io/JohnChen1223.github.io/ # the base hostname & protocol for your site e.g. "https://john-chen1223.github.io/JohnChen1223.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "john-chen1223/john-chen1223.github.io"
+repository               : "John-Chen1223/JohnChen1223.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
