--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Guoquan Chen"
   pronouns         : # example: "she/her"  
-  bio              : "A possible Ph.D candidate, now a M.S. student at Harbin Institute of Technology, Shenzhen."
+  bio              : "Ph.D. candidate in HITSZ. Focusing on space communication and network."
   location         : "Shenzhen, Guangdong, China"
   employer         : "HITSZ"
   uri              : # URL
