--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "CN"
 title                    : "Guoquan Chen"
 title_separator          : "-"
 name                     : &name "Guoquan Chen"
-description              : &description "A possible Ph.D candidate, now a M.S. student at Harbin Institute of Technology, Shenzhen."
+description              : &description "Ph.D. student in HITSZ"
 url                      : https://john-chen1223.github.io/JohnChen1223.github.io/ # the base hostname & protocol for your site e.g. "https://john-chen1223.github.io/JohnChen1223.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "John-Chen1223/JohnChen1223.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Guoquan Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. candidate in HITSZ. Focusing on space communication and network."
+  bio              : "Ph.D. student in HITSZ. Focusing on space communications and networks."
   location         : "Shenzhen, Guangdong, China"
   employer         : "HITSZ"
   uri              : # URL
